--- a/example/public.xhtml
+++ b/example/public.xhtml
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="sra-experience"></div>
+    <script src="https://tally.so/widgets/embed.js"></script>
     <script type="module" src="imin.lol.es.js"></script>
   </body>
 </html>
