--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="sra-experience"></div>
+    <script src="https://tally.so/widgets/embed.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
