more refined experience

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="sra-experience" data-campaign-id="3"></div>
+    <div id="sra-experience" data-campaign-id="3" data-cms-config="{
+      'campaign_title': 'Join waitlist to get beta access to ImIn.LOL',
+      'campaign_subtitle': 'Whether you are a designer, or developer that are looking to earn some cash or marketer who wants to boost your leads and increase your sales, click the button below',
+      'campaign_floating_label': 'HURRY UP!',
+      'sign_up_button_text': 'Let me in!',
+      'authorized_cta_1': 'Gain more points by referring ImIn.LOL to your network and unlock special rewards.',
+      'authorized_cta_2': 'Gain 3 points for everyone that joins:',
+      'share_cta': 'We already crafted a message for you to convince them 😇. Share it with your network and get 3 points for everyone that joins!'
+    }"></div>
     <script src="https://tally.so/widgets/embed.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
